src/rust/items/snapshots/syn_state_machine__rust__items__type_aliases__tests__concat_idents! (parse it_matches_complex).snap
---
source: src/rust/items/type_aliases.rs
expression: "crate::parse::<TypeAlias<P<Infallible>, Type<P<Infallible>>>>(q.clone())"
---
Ok(
    TypeAlias {
        id: Ident(
            Point,
        ),
        generic_parameters: Some(
            GenericParams {
                params: Interlace {
                    values: [
                        Ty(
                            Rep(
                                [],
                            ),
                            TypeParam {
                                id: Ident(
                                    T,
                                ),
                                bound: None,
                                ty: None,
                            },
                        ),
                    ],
                },
            },
        ),
        bounds: None,
        where_clause: Some(
            WhereClause {
                content: Interlace {
                    values: [
                        Ty(
                            TypeBoundWhereClauseItem {
                                for_lts: None,
                                ty: NoBounds(
                                    TypePath(
                                        HigherOrderPath {
                                            leading: false,
                                            segments: Interlace {
                                                values: [
                                                    Bare(
                                                        Id(
                                                            Ident(
                                                                T,
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                            },
                                        },
                                    ),
                                ),
                                bound: Some(
                                    MinLength(
                                        Interlace {
                                            values: [
                                                Tr(
                                                    TraitBound {
                                                        q: false,
                                                        for_lts: None,
                                                        path: HigherOrderPath {
                                                            leading: false,
                                                            segments: Interlace {
                                                                values: [
                                                                    Bare(
                                                                        Id(
                                                                            Ident(
                                                                                std,
                                                                            ),
                                                                        ),
                                                                    ),
                                                                    Bare(
                                                                        Id(
                                                                            Ident(
                                                                                ops,
                                                                            ),
                                                                        ),
                                                                    ),
                                                                    Generic(
                                                                        Id(
                                                                            Ident(
                                                                                Add,
                                                                            ),
                                                                        ),
                                                                        GenericArgs {
                                                                            args: Interlace {
                                                                                values: [
                                                                                    Ty(
                                                                                        NoBounds(
                                                                                            TypePath(
                                                                                                HigherOrderPath {
                                                                                                    leading: false,
                                                                                                    segments: Interlace {
                                                                                                        values: [
                                                                                                            Bare(
                                                                                                                Id(
                                                                                                                    Ident(
                                                                                                                        T,
                                                                                                                    ),
                                                                                                                ),
                                                                                                            ),
                                                                                                        ],
                                                                                                    },
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                },
            },
        ),
        eq: Some(
            (
                NoBounds(
                    TupleType(
                        Paren(
                            Interlace {
                                values: [
                                    NoBounds(
                                        TypePath(
                                            HigherOrderPath {
                                                leading: false,
                                                segments: Interlace {
                                                    values: [
                                                        Bare(
                                                            Id(
                                                                Ident(
                                                                    T,
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    ),
                                    NoBounds(
                                        TypePath(
                                            HigherOrderPath {
                                                leading: false,
                                                segments: Interlace {
                                                    values: [
                                                        Bare(
                                                            Id(
                                                                Ident(
                                                                    T,
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    ),
                                ],
                            },
                            Span,
                        ),
                    ),
                ),
                None,
            ),
        ),
    },
)
