src/rust/items/snapshots/syn_state_machine__rust__items__type_aliases__tests__concat_idents! (parse it_matches_simple).snap
---
source: src/rust/items/type_aliases.rs
expression: "crate::parse::<TypeAlias<Infallible, Type<Infallible>>>(q.clone())"
---
Ok(
    TypeAlias {
        id: Ident(
            Point,
        ),
        generic_parameters: None,
        bounds: None,
        where_clause: None,
        eq: None,
    },
)
