src/rust/items/snapshots/syn_state_machine__rust__items__type_aliases__tests__concat_idents! (parse it_matches_simple_eq).snap
---
source: src/rust/items/type_aliases.rs
expression: "crate::parse::<TypeAlias<P<Infallible>, Type<P<Infallible>>>>(q.clone())"
---
Ok(
    TypeAlias {
        id: Ident(
            Point,
        ),
        generic_parameters: None,
        bounds: None,
        where_clause: None,
        eq: Some(
            (
                NoBounds(
                    TupleType(
                        Paren(
                            Interlace {
                                values: [
                                    NoBounds(
                                        TypePath(
                                            HigherOrderPath {
                                                leading: false,
                                                segments: Interlace {
                                                    values: [
                                                        Bare(
                                                            Id(
                                                                Ident(
                                                                    u8,
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    ),
                                    NoBounds(
                                        TypePath(
                                            HigherOrderPath {
                                                leading: false,
                                                segments: Interlace {
                                                    values: [
                                                        Bare(
                                                            Id(
                                                                Ident(
                                                                    u8,
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                    ),
                                ],
                            },
                            Span,
                        ),
                    ),
                ),
                None,
            ),
        ),
    },
)
